# parallel-physical-partical-stimulation

./: .gitignore  BruteForce_omp.cpp  BruteForce_omp.h  CMakeLists.txt  Core.cpp  HierarchicalGrid_omp.cpp  HierarchicalGrid_omp.h  Kdtree_omp.cpp  Kdtree_omp.h  LooseOctree_omp.cpp  LooseOctree_omp.h  Makefile  Octree_omp.cpp  Octree_omp.h  README.md  SortAndSweep_omp.cpp  SortAndSweep_omp.h  UniformGrid_omp.cpp  UniformGrid_omp.h  cmake_install.cmake  spatial-benchmark
